--- a/.github/workflows/create_data_json.yml
+++ b/.github/workflows/create_data_json.yml
@@ -40,7 +40,7 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add data/hamamatsu/data2.json
-        git commit -m "[BOT] Update news.json" || true
+        git commit -m "[BOT] Update data.json" || true
 
     - name: PUSH
       uses: ad-m/github-push-action@master
