workflowでpushする前にpullさせる

--- a/.github/workflows/create_data_json.yml
+++ b/.github/workflows/create_data_json.yml
@@ -41,6 +41,7 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git add data/hamamatsu/data2.json
         git commit -m "[BOT] Update data.json" || true
+        git pull
 
     - name: PUSH
       uses: ad-m/github-push-action@master
