data.json作成タスク内のgitコマンドのエラーを修正した

--- a/.github/workflows/create_data_json.yml
+++ b/.github/workflows/create_data_json.yml
@@ -41,7 +41,8 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git add data/hamamatsu/data2.json
         git commit -m "[BOT] Update data.json" || true
-        git pull
+        git fetch origin dev-hamamatsu
+        git merge
 
     - name: PUSH
       uses: ad-m/github-push-action@master
