--- a/.github/workflows/create_data_json.yml
+++ b/.github/workflows/create_data_json.yml
@@ -4,7 +4,7 @@ env:
   TZ: Asia/Tokyo
 on:
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '0 * * * *'
 jobs:
   check_data:
     runs-on: ubuntu-latest
