fix invalid cron settings

--- a/.github/workflows/create_data_news_json.yml
+++ b/.github/workflows/create_data_news_json.yml
@@ -5,7 +5,7 @@ env:
   TZ: Asia/Tokyo
 on:
   schedule:
-    - cron:  '0 6-24 * * *'
+    - cron:  '0 * * * *'
 jobs:
   check_news:
     runs-on: ubuntu-latest
