--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "generate:dev": "cross-env NODE_ENV=development nuxt-ts generate",
     "generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
     "lint-and-generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
-    "test": "echo 'skip tests (there is no test)'",
     "lint": "eslint './**/*.{js,ts,vue}'",
     "lint:fix": "eslint './**/*.{js,ts,vue}' --fix",
     "stylelint": "stylelint '**/*.{css,scss,vue}'",
     "stylelint:fix": "stylelint --fix '**/*.{css,scss,vue}'",
-    "clean-hardsource": "rimraf ./node_modules/.cache/hard-source"
+    "clean-hardsource": "rimraf ./node_modules/.cache/hard-source",
+    "test": "jest --config jest.config.js ./test/components",
+    "test:e2e": "jest --config jest.e2e.config.js --runInBand ./test/e2e",
+    "testServer": "nuxt build && nuxt start --port 3000"
   },
   "lint-staged": {
     "*.{js,ts,css,vue}": [
@@ -46,7 +48,7 @@
     "mapbox-gl": "^1.8.1",
     "mapbox-gl-vue": "^2.0.4",
     "nuxt": "^2.11.0",
-    "nuxt-i18n": "^6.6.0",
+    "nuxt-i18n": "6.27.0",
     "vue-chartjs": "^3.5.0",
     "vue-scrollto": "^2.17.1",
     "vue-spinner": "^1.0.3"
@@ -58,7 +60,7 @@
     "@nuxtjs/eslint-config-typescript": "^1.0.2",
     "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/stylelint-module": "^3.2.2",
-    "@nuxtjs/vuetify": "^1.0.0",
+    "@nuxtjs/vuetify": "1.11.3",
     "@types/chart.js": "^2.9.14",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
@@ -68,11 +70,13 @@
     "eslint-plugin-tsdoc": "^0.2.3",
     "husky": "^4.2.3",
     "jest": "^24.1.0",
+    "jest-puppeteer": "^5.0.3",
     "lint-staged": "^10.0.8",
     "nodemon": "^1.18.9",
     "nuxt-purgecss": "^0.2.1",
     "nuxt-svg-loader": "^1.2.0",
     "prettier": "^1.19.1",
+    "puppeteer": "^9.1.1",
     "rimraf": "^3.0.2",
     "stylelint": "^13.2.0",
     "stylelint-config-prettier": "^8.0.1",
