fixed build error

--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     }
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^0.4.0",
+    "@nuxt/types": "2.15.6",
+    "@nuxt/typescript-runtime": "2.1.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@types/d3": "^5.7.2",
     "@types/mapbox-gl": "^1.8.0",
-    "chart.js": "^2.9.3",
+    "chart.js": "2.9.4",
     "cross-env": "^5.2.0",
     "dayjs": "^1.8.21",
     "express": "^4.16.4",
@@ -49,19 +50,19 @@
     "mapbox-gl-vue": "^2.0.4",
     "nuxt": "^2.11.0",
     "nuxt-i18n": "6.27.0",
-    "vue-chartjs": "^3.5.0",
+    "vue-chartjs": "3.5.1",
     "vue-scrollto": "^2.17.1",
     "vue-spinner": "^1.0.3"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@mdi/font": "^5.0.45",
-    "@nuxt/typescript-build": "^0.6.0",
+    "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/eslint-config-typescript": "^1.0.2",
     "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/stylelint-module": "^3.2.2",
     "@nuxtjs/vuetify": "1.11.3",
-    "@types/chart.js": "^2.9.14",
+    "@types/chart.js": "2.9.31",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "eslint": "^6.8.0",
