#1051 rename base branch to main

--- a/.github/workflows/create_data_news_json.yml
+++ b/.github/workflows/create_data_news_json.yml
@@ -16,7 +16,7 @@ jobs:
     #     path: development
     - uses: actions/checkout@v2
       with:
-        ref: prod-hamamatsu
+        ref: main
         path: production
     - name: RUN PYTHON SCRIPT(create news.json)
       run: python3 -B production/tool/create_news_json.py > production/data/hamamatsu/news.json
@@ -41,6 +41,6 @@ jobs:
         path: production
         commit-message: BOT; UPDATE DATA
         title: BOT; UPDATE DATA to prod-hamamatsu
-        base: prod-hamamatsu
+        base: main
         branch: data-bot/prod-hamamatsu
         labels: auto_merge
