--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "covid19",
   "version": "1.0.0",
-  "description": "東京都 新型コロナウイルス感染症対策サイト",
-  "author": "東京都",
+  "description": "浜松市 新型コロナウイルス感染症対策サイト",
+  "author": "浜松市",
   "private": true,
   "engines": {
     "node": "14.17.0"
