--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@nuxt/types": "2.15.6",
     "@nuxt/typescript-runtime": "2.1.0",
     "@nuxtjs/dotenv": "^1.4.0",
-    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@types/d3": "^5.7.2",
     "@types/mapbox-gl": "^1.8.0",
     "chart.js": "2.9.4",
