--- a/.github/workflows/e2etest.yml
+++ b/.github/workflows/e2etest.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.17.0]
+        node-version: [14.19.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,6 +29,9 @@ jobs:
 
       #    - name: Build
       #      run: yarn run build
+
+      - name: Run stylelint
+        run: yarn run stylelint
 
       - name: Run test
         run: LANG=ja_JP yarn run test:e2e
