--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "author": "浜松市",
   "private": true,
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "cross-env NODE_ENV=production nuxt-ts start",
-    "generate:deploy": "cross-env NODE_ENV=production nuxt-ts generate",
-    "generate:dev": "cross-env NODE_ENV=development nuxt-ts generate",
-    "generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
-    "lint-and-generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
+    "dev": "cross-env NODE_ENV=development nuxt",
+    "build": "nuxt build",
+    "start": "cross-env NODE_ENV=production nuxt start",
+    "generate:deploy": "cross-env NODE_ENV=production nuxt generate",
+    "generate:dev": "cross-env NODE_ENV=development nuxt generate",
+    "generate": "eslint './**/*.{js,ts,vue}' && nuxt generate",
+    "lint-and-generate": "eslint './**/*.{js,ts,vue}' && nuxt generate",
     "lint": "eslint './**/*.{js,ts,vue}'",
     "lint:fix": "eslint './**/*.{js,ts,vue}' --fix",
     "stylelint": "stylelint '**/*.{css,scss,vue}'",
@@ -32,12 +32,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sh pre-commit.sh && lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
     "@nuxt/types": "2.15.6",
-    "@nuxt/typescript-runtime": "2.1.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@types/d3": "^5.7.2",
