--- a/.github/workflows/create_data_news_json.yml
+++ b/.github/workflows/create_data_news_json.yml
@@ -23,6 +23,8 @@ jobs:
       run: cd production/tool/csv2json/src/app && go build -o ../../../csv2json.bin main.go && cd ../../../../../
     - name: RUN csv2json
       run: production/tool/csv2json.bin production/data/hamamatsu/data.json
+    - name: REMOVE csv2json
+      run: rm production/tool/csv2json.bin
     - name: Create Pull Request main
       uses: peter-evans/create-pull-request@v3
       with:
