--- a/.github/workflows/create_data_news_json.yml
+++ b/.github/workflows/create_data_news_json.yml
@@ -15,8 +15,8 @@ jobs:
       with:
         ref: main
         path: production
-    - name: RUN PYTHON SCRIPT(create news.json)
-      run: python3 -B production/tool/create_news_json.py > production/data/hamamatsu/news.json
+    # - name: RUN PYTHON SCRIPT(create news.json)
+    #   run: python3 -B production/tool/create_news_json.py > production/data/hamamatsu/news.json
     # - name: RUN PYTHON SCRIPT(create data.json)
     #   run: python3 -B -c "import os; os.chdir('production/tool'); import create_data_json; x = create_data_json.process('${{ secrets.APIKEY_CSV2JSON }}'); print(x)" > production/data/hamamatsu/data.json
     - name: BUILD csv2json
